# wsbsent

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/: equity_returns.csv  wsb_daily_sentiment.csv  wsb_raw.csv  wsb_scored.csv
docs/: _quarto.yml  index.html  index.qmd  references.bib  report.html  report.qmd  styles.css  tutorial.html  tutorial.qmd
docs/_site/: search.json  tutorial.html
scripts/: clean_data.py
wsbsent/: __init__.py  analysis.py  collect.py  prices.py  sentiment.py  visualize.py  wrangling.py
